# bin-packing

./: README.md  packing_result.json  pyproject.toml  visualizer.py
.github/workflows/: ci.yml
src/: exporter.py  main.py  packing.py  visualizer.py
src/enums/: __init__.py  geometry.py  hazard.py  orientation.py
src/models/: __init__.py  container.py  placed_item.py  product.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_exporter.py  test_models.py  test_packing.py  test_visualizer.py
